# web_posts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
web_posts/: manage.py
web_posts/posts/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
web_posts/posts/migrations/: 0001_initial.py
web_posts/web_posts/: asgi.py  settings.py  urls.py  wsgi.py
